DKIM keys can now be set on a domain by domain basis, rather than all virtual servers using the same key.
Fixed support for the Options directive in Apache 2.4.
---- Changes since 4.08 ----
Updated the phpMyAdmin script installer to version 4.2.5, Revive Adserver to 3.0.5, Magento to 1.9.0.1, Instiki to 0.19.7, TikiWiki to 12.2, FengOffice to 2.6.1, PiWik to 2.4.1, MediaWiki to 1.23.1 and 1.19.17, Dolibarr to 3.5.3, phpMyFAQ to 2.8.11, ZenPhoto to 1.4.6, osCommerce to 2.3.4, Joomla to 3.3.1 and 2.5.22, NodeJS to 0.10.29, SMF to 2.0.8, OwnCloud to 6.0.4, SugarCRM to 6.5.17, Z-push to 2.1.3, DokuWiki to 2014-05-05a, osTicket to 1.9.2 and 1.8.4, Coppermine to 1.5.30, and Django to 1.6.5 and 1.4.13.
Renamed the X2CRM installer to X2Engine, and updated the version to 4.1.4.
Added Virtualmin configuration options for commands to run before and after a reseller is created, modified or deleted.
Added a warning message on the password change forms if a domain's MySQL or PostgreSQL logins would also be effected.
---- Changes since 4.09 ----
Updated the Dolibarr script installer to version 3.6.0, Drupal to 7.31 and 6.33, phpMyAdmin to 4.2.7.1, 4.0.10.2 and 4.1.14.3, Roundcube to 1.0.2, FengOffice to 2.6.3, Joomla to 3.3.3 and 2.5.24, MediaWiki to 1.23.3 and 1.19.18, Node.JS to 0.10.31, phpMyFAQ to 2.8.12, ownCloud to 7.0.2, Wordpress to 3.9.2, CMS Made Simple to 1.11.11, phpList to 3.0.7, PiWik to 2.5.0, Ghost to 0.5.1, Django to 1.6.6 and 1.4.14, and X2Engine to 4.1.7.
Ensim migration now includes alias domains and sub-domains.
---- Changes since 4.10 ----
Updated the phpMyAdmin script installer to version 4.2.8, Wordpress to 4.0, PiWik to 2.6.1, and Django to 1.4.15.
If Dovecot 2 or higher has SSL enabled, the certificate for domains with a private IP address will be used for connections to the Dovecot server.
IPv6 addresses in Virtualmin are now supported on all operation systems that Webmin supports them for, rather than just Linux.