@@ -43,5 +43,3 @@
 
  - Backup to Google Cloud Files & Dropbox
 	- Cloudmin too
-
- - Domain and global level mailbox deletion policies
