@@ -1,0 +1,14 @@
+<header>Mailbox Cleanup</header>
+
+This page can be used to setup a mailbox cleanup policy that applies to some
+or all virtual servers on your system. Unlike the per-domain spam and virus
+folder cleanup settings, the policy set here applies to all folders of all
+users in each chosen domain - including the inbox. <p>
+
+Message deletion can be based either on a time threshold, or a maximum mailbox
+size. Deletion based on message age is an easy way to setup a retention policy
+to limit the maximum age of stored messages. However, email already downloaded
+to users' mail clients (such as Outlook and Thunderbird) will not be removed.
+<p>
+
+<footer>
